Extract metadata tracking from CpuCaptureHandler
CpuCaptureHandler previously queried the live transport daemon for
trace information to populate telemetry metadata. This created an
unwanted coupling between the trace parser and the live transport
session.

This commit shifts the responsibility of building the telemetry
metadata into CpuProfilerStage. The fully  populated
CpuCaptureMetadata is now passed as a DTO to the handler,
cleanly separating parsing logic from live session data.

Bug: 505962501
Test: Existing tests (CpuProfilerStageTest) pass
Change-Id: If265509b0da73420f957faa7ce0ab4d598af5a8b